--- a/apps/vue-vite-app/package.json
+++ b/apps/vue-vite-app/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@ffmpeg/ffmpeg": "*",
     "@ffmpeg/util": "*",
+    "vconsole": "^3.15.1",
     "vue": "^3.4.18"
   },
   "devDependencies": {
